# RadarProject

./: .gitignore  .~lock.RadarProject.csv#  LICENSE  RadarProject-job.gbrjob  RadarProject.kicad_pcb  RadarProject.kicad_pro  catsymbol.kicad_sym
AnalogRadar/: RadarProject.kicad_pcb  RadarProject.kicad_sch
AnalogRadar/Gerber/: RadarProject-B_Paste.gbr  RadarProject-B_Silkscreen.gbr  RadarProject-Edge_Cuts.gbr  RadarProject-F_Cu.gbr  RadarProject-F_Mask.gbr  RadarProject-In1_Cu.gbr  RadarProject-In2_Cu.gbr  RadarProject-NPTH.drl  RadarProject-PTH.drl  RadarProject-job.gbrjob
AnalogRadar/MkI/: .MkI.txt.un~  MkI.txt  RadarProject.kicad_pcb  RadarProject.kicad_prl  fp-info-cache
AnalogRadar/MkII/: RadarProject.kicad_pcb  RadarProject.kicad_pro  (+2 more)
Antennas/: Antenna-Body.dxf  Antenna-Body.iges  Antenna.FCStd1  AntennaMount.FCStd  AntennaMount.FCStd1  AntennaMount.stl
Code/AdcTest/: CMakeLists.txt  adctest.c
Code/USBTest/: CMakeLists.txt  usb_descriptors.c  usbtest.c
Gerber/: RadarProject-B_Paste.gbr  RadarProject-B_Silkscreen.gbr  RadarProject-Edge_Cuts.gbr  RadarProject-F_Cu.gbr  RadarProject-F_Mask.gbr  RadarProject-F_Paste.gbr  RadarProject-In2_Cu.gbr
PCB/: Radar.ps  RadarProject.csv  RadarProject.kicad_pcb  RadarProject.kicad_prl  RadarProject.kicad_pro  RadarProject.kicad_sch  RadarProject.kicad_sch-bak  fp-info-cache
PicoBoard/: #auto_saved_files#  PicoBoard.kicad_pcb  PicoBoard.kicad_prl  PicoBoard.kicad_pro  PicoBoard.kicad_sch  fp-info-cache  fp-lib-table
ShoppingLists/: .~lock.DigiKeyShopping.csv#  DigiKeyShopping.csv  MouserShopping.xls
(+86 files in other folders)
